[gd_scene load_steps=5 format=3 uid="uid://cacrtu2f8bujc"]

[ext_resource type="PackedScene" uid="uid://cpbhc3fmxqkoj" path="res://ui/bars/stat_bar/stat_bar.tscn" id="1_erekq"]
[ext_resource type="Script" path="res://ui/score_boards/sim_section/sim_section.gd" id="1_ix3mu"]
[ext_resource type="Texture2D" uid="uid://c5lo0bs41dftt" path="res://ui/bars/stat_bar/assets/bar_blue_v1.png" id="2_1tmyy"]
[ext_resource type="Texture2D" uid="uid://bxgcepj8gnf8m" path="res://ui/bars/stat_bar/assets/bar_yellow_v1.png" id="3_fu82u"]

[node name="SimSection" type="Control"]
custom_minimum_size = Vector2(185, 50)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ix3mu")

[node name="GridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(185, 50)
layout_mode = 0
offset_right = 180.0
offset_bottom = 50.0
columns = 2

[node name="LabelHome" type="Label" parent="GridContainer"]
layout_mode = 2
text = "XX"

[node name="StatBarHome" parent="GridContainer" instance=ExtResource("1_erekq")]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_1tmyy")

[node name="LabelAway" type="Label" parent="GridContainer"]
layout_mode = 2
text = "XX"

[node name="StatBarAway" parent="GridContainer" instance=ExtResource("1_erekq")]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_fu82u")
